# Cobity

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RobotPlugin.sln  RobotPlugin.vcxproj  RobotPlugin.vcxproj.filters
Release/: KinovaController..dll.recipe  KinovaController.dll.recipe  KinovaController.exe.recipe  KinovaVelocityController.cpp
x64/Release/: RobotPlugin.exe.recipe  RobotPlugin.exp  RobotPlugin.lib  RobotPlugin.vcxproj.FileListAbsolute.txt
x64/ReleaseLibrary/: RobotPlugin.dll.recipe  RobotPlugin.exp  RobotPlugin.lib  RobotPlugin.vcxproj.FileListAbsolute.txt
